--- a/personal/index.html
+++ b/personal/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Rubik&display=swap' rel="stylesheet" crossorigin>
     <script src='JS/typewriter.js'></script>
-    <script src="js/particles.js"></script>
+    <script src="JS/particles.js"></script>
     
     <script src='JS/waypoint.js'></script>
     <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel="stylesheet">
