--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 
 </head>
 <body>
+  
+  <div class="svg-container" style="position: absolute; right: 0%; top: 0%; z-index: 99;">
+    <svg height="145" width="165" viewBox="500 500" style="position: relative; transform: scale(0.6);">
+      <polyline points="110 55, 35 55, 85 5, 150 68" fill="none" stroke="#ff7b00" stroke-width="6"/>
+      <polyline points="60 80, 135 80, 85 130, 21 66" fill="none" stroke="#0084FF" stroke-width="6"/>
+      <!-- Background color hex: 202020-->
+  </svg> 
+  </div>
+
     <div id="particles-js"></div>
     <div class="count-particles">
         <span class="js-count-particles"></span>
@@ -350,11 +359,11 @@
 
 <!-- Google Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-E96S3EQHG3"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-E96S3EQHG3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-E96S3EQHG3');
-</script>
+</script> -->
