Fixing svg logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   
   <div class="svg-container" style="position: absolute; right: 0%; top: 0%; z-index: 99;">
-    <svg height="145" width="165" viewBox="500 500" style="position: relative; transform: scale(0.6);">
+    <svg height="145" width="165" style="position: relative; transform: scale(0.6);">
       <polyline points="110 55, 35 55, 85 5, 150 68" fill="none" stroke="#ff7b00" stroke-width="6"/>
       <polyline points="60 80, 135 80, 85 130, 21 66" fill="none" stroke="#0084FF" stroke-width="6"/>
       <!-- Background color hex: 202020-->
