Added page icon

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="https://cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js"></script>
 
 
+    <link rel="shortcut icon" href="assets/logobold.png">
+
 </head>
 <body>
   
