Updated title for index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>About - RockSolid1106</title>
+<title>RockSolid1106</title>
 <head>
     
     <link rel="stylesheet" href="style.css">
