Disabled clicking on particles.js

--- a/index.html
+++ b/index.html
@@ -238,6 +238,10 @@
           "enable": true,
           "mode": "repulse"
         },
+        "onclick": {
+          "enable": false,
+          "mode": "push"
+        },
         "resize": true
       },
       "modes": {
