Fixing metas for embedding

--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
     <meta property="og:image" content="assets/embed.png" />
     <meta content="orange" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Primary Meta Tags -->
+<title>RockSolid1106</title>
+<meta name="title" content="RockSolid1106">
+<meta name="description" content="RockSolid1106's Personal Webpage.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rocksolid1106.github.io">
+<meta property="og:title" content="RockSolid1106">
+<meta property="og:description" content="RockSolid1106's Personal Webpage.">
+<meta property="og:image" content="assets/embed.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https:">
+<meta property="twitter:title" content="https://rocksolid1106.github.io">
+<meta property="twitter:description" content="RockSolid1106's Personal Webpage.">
+<meta property="twitter:image" content="assets/embed.png">
+
 </head>
 <body>
   <span id="working-banner" style="position: absolute; top: 0; width: 100%; height: 1.4em; left: 0; text-align: center; font-family: 'Inter', sans-serif; background-color: red; color: yellow; font-size: 0.81vw">Hello, I see you've dropped onto my website, but it's currently under development. Please ignore any bugs, I'm probably working on it. If you have a suggestion, and it is obvious that I'm not working on it, you can shoot me a DM on the LTT Forum. Thank you!</span>
