Fix2 for embedding meta's

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta property="og:title" content="RockSolid1106" />
     <meta property="og:description" content="RockSolid1106's Personal Webpage." />
     <meta property="og:url" content="https://rocksolid1106.github.io" />
-    <meta property="og:image" content="assets/embed.png" />
+    <meta property="og:image" content="https://rocksolid1106.github.io/assets/embed.png" />
     <meta content="orange" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
 
@@ -44,14 +44,14 @@
 <meta property="og:url" content="https://rocksolid1106.github.io">
 <meta property="og:title" content="RockSolid1106">
 <meta property="og:description" content="RockSolid1106's Personal Webpage.">
-<meta property="og:image" content="assets/embed.png">
+<meta property="og:image" content="https://rocksolid1106.github.io/assets/embed.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https:">
 <meta property="twitter:title" content="https://rocksolid1106.github.io">
 <meta property="twitter:description" content="RockSolid1106's Personal Webpage.">
-<meta property="twitter:image" content="assets/embed.png">
+<meta property="twitter:image" content="https://rocksolid1106.github.io/assets/embed.png">
 
 </head>
 <body>
