--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:description" content="RockSolid1106's Personal Webpage." />
     <meta property="og:url" content="https://rocksolid1106.github.io" />
     <meta property="og:image" content="https://rocksolid1106.github.io/assets/embed.png" />
-    <meta content="orange" data-react-helmet="true" name="theme-color" />
+    <meta content="#FF9401" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Primary Meta Tags -->
