Added another headphone image

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
           <img src="assets/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy">
           <img src="assets/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy">
 
-          <img src="assets/headphones.JPG" class="keybimages" id="headphones" loading="lazy">
+          <img src="assets/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy">
+          <img src="assets/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy">
 
           <img src="assets/pen.JPG" class="keybimages" id="pen" loading="lazy">
 
