--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 </head>
 <body>
-  <span id="working-banner" style="position: absolute; top: 0; width: 100%; height: 1.4em; left: 0; text-align: center; font-family: 'Inter', sans-serif; background-color: red; color: yellow; font-size: 0.81vw">Hello, I see you've dropped onto my website, but it's currently under development. Please ignore any bugs, I'm probably working on it. If you have a suggestion, and it is obvious that I'm not working on it, you can shoot me a DM on the LTT Forum. Thank you!</span>
-<section class="sections secmain"> 
+  <section class="sections secmain"> 
+  <span id="working-banner" style="z-index: 10; position: absolute; top: 0; width: 100%; height: 1.4em; left: 0; text-align: center; font-family: 'Inter', sans-serif; background-color: green; color: yellow; font-size: 0.81vw">Hello, I see you've dropped onto my website, but it's currently under development. Please ignore any bugs, I'm probably working on it. If you have a suggestion, and it is obvious that I'm not working on it, you can shoot me a DM on the LTT Forum. Thank you!</span>
   <!-- SVG Icon at top right -->
   <div class="svg-container" style="position: absolute; right: 0%; top: 0%; z-index: 99; border-radius: 50%; border: 0.3rem solid #0094ff; padding: 1em; transform: scale(0.6); background-color: #202020;">
     <svg height="145" width="165" style="position: relative; transform: translate(-0.1em, 0.3em)">
