--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
 
 <!-- Google Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-E96S3EQHG3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E96S3EQHG3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-E96S3EQHG3');
-</script> -->
+</script> 
