object -> product photography

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <br><br>
         Some decent shots are of a <a href="#" class="hrefanimunderline" id="keybhref" onmouseover="displaykeybimag()" onmouseleave="removekeybimag()">Keyboard</a> and some <a href="#" class="hrefanimunderline" id="buthref" onmouseover="displaybuttimag()" onmouseleave="removebuttimag()">Butterflies</a>.
         <br><br>
-        I'm also taking some interest in object photography, some shots of my  <a href="#" class="hrefanimunderline" id="headhref" onmouseover="displayheadimag()" onmouseleave="removeheadimag()">Headphones</a> and a  <a href="#" id="penhref" class="hrefanimunderline" onmouseover="displaypenimag()" onmouseleave="removepenimag()">Pen</a>.
+        I'm also taking some interest in product photography, some shots of my  <a href="#" class="hrefanimunderline" id="headhref" onmouseover="displayheadimag()" onmouseleave="removeheadimag()">Headphones</a> and a  <a href="#" id="penhref" class="hrefanimunderline" onmouseover="displaypenimag()" onmouseleave="removepenimag()">Pen</a>.
           <img src="assets/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy">
           <img src="assets/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy">
           <img src="assets/keyboard/3.JPG" class="keybimages" id="keyb-3" loading="lazy">
