--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Fonts - Google-fonts -->
+    <!-- Fonts - Google fonts -->
     <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
+    <!-- Metropolis Font -->
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/metropolis" type="text/css"/> 
 
     <!-- Scripts - Particles.js and Typewriter.js -->
     <script src='JS/typewriter.js'></script>
@@ -129,7 +132,7 @@
   </div>
 
   <div class="pprogrammer fade-in">
-    <span id="pass">Passionate Programmer.</span>
+    <span id="pass" class="box-headers">Passionate Programmer.</span>
     <p>
       I'm a passionate programmer, who loves to make stuff that benefits others, or just pleases me. Just making things I'll appreciate.
       <br><br>
@@ -148,7 +151,7 @@
   <!-- Camera SVG background -->
   <img src="assets/camera.svg" id="sec3-pattern">
   <div class="amphotographer fade-in">
-    <span id="amat">Amateur Photographer.</span>
+    <span id="amat" class="box-headers">Amateur Photographer.</span>
     <p>
         Photography. Just a thing I like. Not that I'm great at it. Photos off my camera usually don't look great, but I like experiementing.
         <br><br>
