Fixed an issue with metadata

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https:">
+<meta property="twitter:url" content="https://rocksolid1106.github.io">
 <meta property="twitter:title" content="https://rocksolid1106.github.io">
 <meta property="twitter:description" content="RockSolid1106's Personal Webpage.">
 <meta property="twitter:image" content="https://rocksolid1106.github.io/assets/embed.png">
