Minor changes to positioning of images

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
       <br><br>
       Languages I use include <span id="likeftwo">Python, HTML CSS JS</span>, Java. I like the <a href="#" id="ftwo" onmouseover="document.getElementById('likeftwo').style.color='orange';" onmouseleave="document.getElementById('likeftwo').style.color='white';">first two</a> of those.
 
-      <img src="assets/venom-screenshot.png" id="venomsc">
-      <img src="assets/customizer.png" id="cust">
+      <img src="assets/venom-screenshot.png" id="venomsc" positioned="false">
+      <img src="assets/customizer.png" id="cust" positioned="false">
       
     </p>
   </div>
@@ -158,17 +158,17 @@
         Some decent shots are of a <a href="#" class="hrefanimunderline" id="keybhref" onmouseover="displaykeybimag()" onmouseleave="removekeybimag()">Keyboard</a> and some <a href="#" class="hrefanimunderline" id="buthref" onmouseover="displaybuttimag()" onmouseleave="removebuttimag()">Butterflies</a>.
         <br><br>
         I'm also taking some interest in product photography, some shots of my  <a href="#" class="hrefanimunderline" id="headhref" onmouseover="displayheadimag()" onmouseleave="removeheadimag()">Headphones</a> and a  <a href="#" id="penhref" class="hrefanimunderline" onmouseover="displaypenimag()" onmouseleave="removepenimag()">Pen</a>.
-          <img src="assets/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy">
-          <img src="assets/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy">
-          <img src="assets/keyboard/3.JPG" class="keybimages" id="keyb-3" loading="lazy">
+          <img src="assets/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy" positioned="false">
+          <img src="assets/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy" positioned="false">
+          <img src="assets/keyboard/3.JPG" class="keybimages" id="keyb-3" loading="lazy" positioned="false">
 
-          <img src="assets/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy">
-          <img src="assets/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy">
+          <img src="assets/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy" positioned="false">
+          <img src="assets/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy" positioned="false">
 
-          <img src="assets/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy">
-          <img src="assets/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy">
+          <img src="assets/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy" positioned="false">
+          <img src="assets/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy" positioned="false">
 
-          <img src="assets/pen.JPG" class="keybimages" id="pen" loading="lazy">
+          <img src="assets/pen.JPG" class="keybimages" id="pen" loading="lazy" positioned="false">
 
 
 
