--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>RockSolid1106</title>
 <head>
     <!-- Stylesheets - Main CSS and Animations CSS -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="anim.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/anim.css">
 
     <!-- Preconnecting Google API for importing fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
@@ -59,9 +59,9 @@
 </head>
 <body>
   <section class="sections secmain"> 
-  <span id="working-banner" style="z-index: 10; position: absolute; top: 0; width: 100%; height: 1.4em; left: 0; text-align: center; font-family: 'Inter', sans-serif; background-color: green; color: yellow; font-size: 0.81vw">Hello, I see you've dropped onto my website, but it's currently under development. Please ignore any bugs, I'm probably working on it. If you have a suggestion, and it is obvious that I'm not working on it, you can shoot me a DM on the LTT Forum. Thank you!</span>
+  <!-- <span id="working-banner" style="z-index: 10; position: absolute; top: 0; width: 100%; height: 1.4em; left: 0; text-align: center; font-family: 'Inter', sans-serif; background-color: green; color: yellow; font-size: 0.81vw">Hello, I see you've dropped onto my website, but it's currently under development. Please ignore any bugs, I'm probably working on it. If you have a suggestion, and it is obvious that I'm not working on it, you can shoot me a DM on the LTT Forum. Thank you!</span> -->
   <!-- SVG Icon at top right -->
-  <div class="svg-container" style="position: absolute; right: 0%; top: 0%; z-index: 99; border-radius: 50%; border: 0.3rem solid #0094ff; padding: 1em; transform: scale(0.6); background-color: #202020;">
+  <div class="svg-container" style="">
     <svg height="145" width="165" style="position: relative; transform: translate(-0.1em, 0.3em)">
       <polyline points="110 55, 35 55, 85 5, 150 68" fill="none" stroke="#ff7b00" stroke-width="6"/>
       <polyline points="60 80, 135 80, 85 130, 21 66" fill="none" stroke="#0084FF" stroke-width="6"/>
@@ -70,7 +70,7 @@
   </div>
 
     <!-- Divs for Particles.js -->
-    <div id="particles-js" style="z-index: -1;">
+    <div id="particles-js" style="z-index: -1; background-color: #202020;">
     <div class="count-particles">
         <span class="js-count-particles"></span>
       </div></div>
@@ -78,12 +78,12 @@
   <div class="stuff">
 
     <div class="typewriter">
-        <h1><span style="color: white;">></span><span id="typewrite"></span></h1>
+        <h1><span style="color: white;"></span><span id="typewrite"></span></h1>
     </div>
     <div class="intro-about">
-        <p id="about">
+        <center><p id="about">
             Someone who likes coding, <br>Networking,<br>and Photography 
-        </p>
+        </p></center>
 
     </div>
     <div class="social">
@@ -158,15 +158,15 @@
         Some decent shots are of a <a href="#" class="hrefanimunderline" id="keybhref" onmouseover="displaykeybimag()" onmouseleave="removekeybimag()">Keyboard</a> and some <a href="#" class="hrefanimunderline" id="buthref" onmouseover="displaybuttimag()" onmouseleave="removebuttimag()">Butterflies</a>.
         <br><br>
         I'm also taking some interest in product photography, some shots of my  <a href="#" class="hrefanimunderline" id="headhref" onmouseover="displayheadimag()" onmouseleave="removeheadimag()">Headphones</a> and a  <a href="#" id="penhref" class="hrefanimunderline" onmouseover="displaypenimag()" onmouseleave="removepenimag()">Pen</a>.
-          <img src="assets/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy" positioned="false">
-          <img src="assets/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy" positioned="false">
-          <img src="assets/keyboard/3.JPG" class="keybimages" id="keyb-3" loading="lazy" positioned="false">
+          <img src="assets/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy" data-positioned="false">
+          <img src="assets/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy" data-positioned="false">
+          <img src="assets/keyboard/3.JPG" class="keybimages" id="keyb-3" loading="lazy" data-positioned="false">
 
-          <img src="assets/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy" positioned="false">
-          <img src="assets/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy" positioned="false">
+          <img src="assets/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy" data-positioned="false">
+          <img src="assets/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy" data-positioned="false">
 
-          <img src="assets/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy" positioned="false">
-          <img src="assets/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy" positioned="false">
+          <img src="assets/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy" data-positioned="false">
+          <img src="assets/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy" data-positioned="false">
 
           <img src="assets/pen.JPG" class="keybimages" id="pen" loading="lazy" positioned="false">
 
