--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/metropolis" type="text/css"/> 
 
     <!-- Scripts - Particles.js and Typewriter.js -->
-    <script src='JS/typewriter.js'></script>
-    <script src="JS/particles.js"></script>
+    <script src='min_js/typewriter.js'></script>
+    <script src="min_js/particles.js"></script>
     
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin></script>
