Fixed minified file names

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>RockSolid1106</title>
 <head>
     <!-- Stylesheets - Main CSS and Animations CSS -->
-    <link rel="stylesheet" href="CSS/style.min.css">
-    <link rel="stylesheet" href="CSS/anim.min.css">
+    <link rel="stylesheet" href="min_css/style.min.css">
+    <link rel="stylesheet" href="min_css/anim.min.css">
 
     <!-- Preconnecting Google API for importing fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
@@ -182,7 +182,7 @@
 
 
 
-<script src="JS/script.min.js"></script>
+<script src="min_js/script.min.js"></script>
 </body>
 <script>
 </script>
