--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div class="intro-about">
         <center><p id="about">
-            Someone who likes coding, <br>Networking,<br>and Photography 
+            Someone who likes coding, <br>Networking,<br>and Photography.
         </p></center>
 
     </div>
