--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>RockSolid1106</title>
 <head>
     <!-- Stylesheets - Main CSS and Animations CSS -->
-    <link rel="stylesheet" href="min_css/style.min.css">
-    <link rel="stylesheet" href="min_css/anim.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/anim.css">
 
     <!-- Preconnecting Google API for importing fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
@@ -19,8 +19,8 @@
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/metropolis" type="text/css"/> 
 
     <!-- Scripts - Particles.js and Typewriter.js -->
-    <script src='min_js/typewriter.min.js'></script>
-    <script src="min_js/particles.min.js"></script>
+    <script src='JS/typewriter.js'></script>
+    <script src="JS/particles.js"></script>
     
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin></script>
@@ -182,7 +182,7 @@
 
 
 
-<script src="min_js/script.min.js"></script>
+<script src="JS/script.js"></script>
 </body>
 <script>
 </script>
