Changed file paths following folder restructure

--- a/index-development.html
+++ b/index-development.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="RockSolid1106" />
     <meta property="og:description" content="RockSolid1106's Personal Webpage." />
     <meta property="og:url" content="https://rocksolid1106.github.io" />
-    <meta property="og:image" content="https://rocksolid1106.github.io/assets/embed.png" />
+    <meta property="og:image" content="https://rocksolid1106.github.io/assets/images/embed.png" />
     <meta content="#FF9401" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
 
@@ -47,14 +47,14 @@
 <meta property="og:url" content="https://rocksolid1106.github.io">
 <meta property="og:title" content="RockSolid1106">
 <meta property="og:description" content="RockSolid1106's Personal Webpage.">
-<meta property="og:image" content="https://rocksolid1106.github.io/assets/embed.png">
+<meta property="og:image" content="https://rocksolid1106.github.io/assets/images/embed.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://rocksolid1106.github.io">
 <meta property="twitter:title" content="https://rocksolid1106.github.io">
 <meta property="twitter:description" content="RockSolid1106's Personal Webpage.">
-<meta property="twitter:image" content="https://rocksolid1106.github.io/assets/embed.png">
+<meta property="twitter:image" content="https://rocksolid1106.github.io/assets/images/embed.png">
 
 </head>
 <body>
@@ -128,7 +128,7 @@
 
   <!-- SVG thing on the right -->
   <div class="patterns-sec2">
-    <img src="assets/code.svg" style="user-select: none; z-index: 1;">
+    <img src="assets/images/code.svg" style="user-select: none; z-index: 1;">
   </div>
 
   <div class="pprogrammer fade-in">
@@ -140,8 +140,8 @@
       <br><br>
       Languages I use include <span id="likeftwo">Python, HTML CSS JS</span>, Java. I like the <a href="#" id="ftwo" onmouseover="document.getElementById('likeftwo').style.color='orange';" onmouseleave="document.getElementById('likeftwo').style.color='white';">first two</a> of those.
 
-      <img src="assets/venom-screenshot.png" id="venomsc" positioned="false">
-      <img src="assets/customizer.png" id="cust" positioned="false">
+      <img src="assets/images/venom-screenshot.png" id="venomsc" positioned="false">
+      <img src="assets/images/customizer.png" id="cust" positioned="false">
       
     </p>
   </div>
@@ -149,7 +149,7 @@
 
 <section class="sections sec3" style="overflow: hidden;">
   <!-- Camera SVG background -->
-  <img src="assets/camera.svg" id="sec3-pattern">
+  <img src="assets/images/camera.svg" id="sec3-pattern">
   <div class="amphotographer fade-in">
     <span id="amat" class="box-headers">Amateur Photographer.</span>
     <p>
@@ -158,17 +158,17 @@
         Some decent shots are of a <a href="#" class="hrefanimunderline" id="keybhref" onmouseover="displaykeybimag()" onmouseleave="removekeybimag()">Keyboard</a> and some <a href="#" class="hrefanimunderline" id="buthref" onmouseover="displaybuttimag()" onmouseleave="removebuttimag()">Butterflies</a>.
         <br><br>
         I'm also taking some interest in product photography, some shots of my  <a href="#" class="hrefanimunderline" id="headhref" onmouseover="displayheadimag()" onmouseleave="removeheadimag()">Headphones</a> and a  <a href="#" id="penhref" class="hrefanimunderline" onmouseover="displaypenimag()" onmouseleave="removepenimag()">Pen</a>.
-          <img src="assets/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy" data-positioned="false">
-          <img src="assets/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy" data-positioned="false">
+          <img src="assets/images/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy" data-positioned="false">
+          <img src="assets/images/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy" data-positioned="false">
           <img src="assets/keyboard/3.JPG" class="keybimages" id="keyb-3" loading="lazy" data-positioned="false">
 
-          <img src="assets/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy" data-positioned="false">
-          <img src="assets/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy" data-positioned="false">
+          <img src="assets/images/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy" data-positioned="false">
+          <img src="assets/images/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy" data-positioned="false">
 
-          <img src="assets/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy" data-positioned="false">
-          <img src="assets/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy" data-positioned="false">
+          <img src="assets/images/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy" data-positioned="false">
+          <img src="assets/images/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy" data-positioned="false">
 
-          <img src="assets/pen.JPG" class="keybimages" id="pen" loading="lazy" positioned="false">
+          <img src="assets/images/pen.JPG" class="keybimages" id="pen" loading="lazy" positioned="false">
 
 
 
