Fixed file paths

--- a/index-development.html
+++ b/index-development.html
@@ -158,15 +158,15 @@
         Some decent shots are of a <a href="#" class="hrefanimunderline" id="keybhref" onmouseover="displaykeybimag()" onmouseleave="removekeybimag()">Keyboard</a> and some <a href="#" class="hrefanimunderline" id="buthref" onmouseover="displaybuttimag()" onmouseleave="removebuttimag()">Butterflies</a>.
         <br><br>
         I'm also taking some interest in product photography, some shots of my  <a href="#" class="hrefanimunderline" id="headhref" onmouseover="displayheadimag()" onmouseleave="removeheadimag()">Headphones</a> and a  <a href="#" id="penhref" class="hrefanimunderline" onmouseover="displaypenimag()" onmouseleave="removepenimag()">Pen</a>.
-          <img src="assets/images/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy" data-positioned="false">
-          <img src="assets/images/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy" data-positioned="false">
+          <img src="assets/keyboard/1.JPG" class="keybimages" id="keyb-1" loading="lazy" data-positioned="false">
+          <img src="assets/keyboard/2.JPG" class="keybimages" id="keyb-2" loading="lazy" data-positioned="false">
           <img src="assets/keyboard/3.JPG" class="keybimages" id="keyb-3" loading="lazy" data-positioned="false">
 
-          <img src="assets/images/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy" data-positioned="false">
-          <img src="assets/images/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy" data-positioned="false">
+          <img src="assets/butterfly/1.jpeg" class="keybimages" id="butt-1" loading="lazy" data-positioned="false">
+          <img src="assets/butterfly/2.JPG" class="keybimages" id="butt-2" loading="lazy" data-positioned="false">
 
-          <img src="assets/images/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy" data-positioned="false">
-          <img src="assets/images/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy" data-positioned="false">
+          <img src="assets/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy" data-positioned="false">
+          <img src="assets/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy" data-positioned="false">
 
           <img src="assets/images/pen.JPG" class="keybimages" id="pen" loading="lazy" positioned="false">
 
