Fixed positioning issue with pen.jpg

--- a/index-development.html
+++ b/index-development.html
@@ -168,7 +168,7 @@
           <img src="assets/headphone/1.JPG" class="keybimages" id="head-1" loading="lazy" data-positioned="false">
           <img src="assets/headphone/2.JPG" class="keybimages" id="head-2" loading="lazy" data-positioned="false">
 
-          <img src="assets/images/pen.JPG" class="keybimages" id="pen" loading="lazy" positioned="false">
+          <img src="assets/images/pen.JPG" class="keybimages" id="pen" loading="lazy" data-positioned="false">
 
 
 
