--- a/index-development.html
+++ b/index-development.html
@@ -62,11 +62,11 @@
   <!-- <span id="working-banner" style="z-index: 10; position: absolute; top: 0; width: 100%; height: 1.4em; left: 0; text-align: center; font-family: 'Inter', sans-serif; background-color: green; color: yellow; font-size: 0.81vw">Hello, I see you've dropped onto my website, but it's currently under development. Please ignore any bugs, I'm probably working on it. If you have a suggestion, and it is obvious that I'm not working on it, you can shoot me a DM on the LTT Forum. Thank you!</span> -->
   <!-- SVG Icon at top right -->
   <div class="svg-container" style="">
-    <svg height="145" width="165" style="position: relative; transform: translate(-0.1em, 0.3em)">
-      <polyline points="110 55, 35 55, 85 5, 150 68" fill="none" stroke="#ff7b00" stroke-width="6"/>
-      <polyline points="60 80, 135 80, 85 130, 21 66" fill="none" stroke="#0084FF" stroke-width="6"/>
-      <!-- Background color hex: 202020-->
-  </svg> 
+    <svg height="145" width="165" style="position:relative;transform:translate(-.1em,.3em)">
+        <polyline points="110 60, 35 60, 85 10, 153.5 77.5" fill="none" stroke="#ff7b00" stroke-width="9"></polyline>
+        <polyline points="60 90, 135 90, 85 140, 16 73" fill="none" stroke="#0084FF" stroke-width="9"></polyline>
+        <!-- Background color hex: 202020-->
+    </svg>
   </div>
 
     <!-- Divs for Particles.js -->
