Fixes for images

--- a/index-development.html
+++ b/index-development.html
@@ -140,8 +140,8 @@
       <br><br>
       Languages I use include <span id="likeftwo">Python, HTML CSS JS</span>, Java. I like the <a href="#" id="ftwo" onmouseover="document.getElementById('likeftwo').style.color='orange';" onmouseleave="document.getElementById('likeftwo').style.color='white';">first two</a> of those.
 
-      <img src="assets/images/venom-screenshot.png" id="venomsc" positioned="false">
-      <img src="assets/images/customizer.png" id="cust" positioned="false">
+      <img src="assets/images/venom-screenshot.png" id="venomsc" data-positioned="false">
+      <img src="assets/images/customizer.png" id="cust" data-positioned="false">
       
     </p>
   </div>
