Fixed incorrect path to page logo

--- a/index-development.html
+++ b/index-development.html
@@ -26,7 +26,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin></script>
 
     <!-- Page Icon -->
-    <link rel="shortcut icon" href="assets/logobold.png">
+    <link rel="shortcut icon" href="assets/images/logobold.png">
 
     <!-- Metas for embeds -->
     <meta property="og:type" content="website">
