--- a/index-development.html
+++ b/index-development.html
@@ -62,11 +62,57 @@
   <!-- <span id="working-banner" style="z-index: 10; position: absolute; top: 0; width: 100%; height: 1.4em; left: 0; text-align: center; font-family: 'Inter', sans-serif; background-color: green; color: yellow; font-size: 0.81vw">Hello, I see you've dropped onto my website, but it's currently under development. Please ignore any bugs, I'm probably working on it. If you have a suggestion, and it is obvious that I'm not working on it, you can shoot me a DM on the LTT Forum. Thank you!</span> -->
   <!-- SVG Icon at top right -->
   <div class="svg-container" style="">
-    <svg height="145" width="165" style="position:relative;transform:translate(-.1em,.3em)">
-        <polyline points="110 60, 35 60, 85 10, 153.5 77.5" fill="none" stroke="#ff7b00" stroke-width="9"></polyline>
-        <polyline points="60 90, 135 90, 85 140, 16 73" fill="none" stroke="#0084FF" stroke-width="9"></polyline>
-        <!-- Background color hex: 202020-->
-    </svg>
+    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<svg
+   height="150"
+   width="165"
+   viewBox="500 500"
+   version="1.1"
+   id="svg6"
+   sodipodi:docname="logoextrabold-rounded.svg"
+   inkscape:version="1.1.1 (3bf5ae0d25, 2021-09-20)"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg">
+  <defs
+     id="defs10" />
+  <sodipodi:namedview
+     id="namedview8"
+     pagecolor="#505050"
+     bordercolor="#eeeeee"
+     borderopacity="1"
+     inkscape:pageshadow="0"
+     inkscape:pageopacity="0"
+     inkscape:pagecheckerboard="0"
+     showgrid="false"
+     inkscape:zoom="0.9805214"
+     inkscape:cx="-1.5297983"
+     inkscape:cy="57.622403"
+     inkscape:window-width="1920"
+     inkscape:window-height="1017"
+     inkscape:window-x="-8"
+     inkscape:window-y="-8"
+     inkscape:window-maximized="1"
+     inkscape:current-layer="svg6" />
+  <polyline
+     points="110 60, 35 60, 85 10, 153.5 77.5"
+     fill="none"
+     stroke="#ff7b00"
+     stroke-width="9"
+     id="polyline2"
+     style="stroke-linecap:round" />
+  <polyline
+     points="60 90, 135 90, 85 140, 16 73"
+     fill="none"
+     stroke="#0084ff"
+     stroke-width="9"
+     id="polyline4"
+     style="stroke-linecap:round"
+     transform="translate(2.2946975,4.0794622)" />
+  <!-- Background color hex: 202020-->
+</svg>
+
   </div>
 
     <!-- Divs for Particles.js -->
