I'm blind - properly centered logo image

--- a/index-development.html
+++ b/index-development.html
@@ -62,7 +62,7 @@
   <!-- <span id="working-banner" style="z-index: 10; position: absolute; top: 0; width: 100%; height: 1.4em; left: 0; text-align: center; font-family: 'Inter', sans-serif; background-color: green; color: yellow; font-size: 0.81vw">Hello, I see you've dropped onto my website, but it's currently under development. Please ignore any bugs, I'm probably working on it. If you have a suggestion, and it is obvious that I'm not working on it, you can shoot me a DM on the LTT Forum. Thank you!</span> -->
   <!-- SVG Icon at top right -->
   <div class="svg-container" style="">
-    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+   <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg
    height="150"
    width="165"
@@ -79,16 +79,16 @@
      id="defs10" />
   <sodipodi:namedview
      id="namedview8"
-     pagecolor="#505050"
+     pagecolor="#202020"
      bordercolor="#eeeeee"
      borderopacity="1"
      inkscape:pageshadow="0"
      inkscape:pageopacity="0"
      inkscape:pagecheckerboard="0"
      showgrid="false"
-     inkscape:zoom="0.9805214"
-     inkscape:cx="-1.5297983"
-     inkscape:cy="57.622403"
+     inkscape:zoom="3.9220856"
+     inkscape:cx="82.991559"
+     inkscape:cy="86.051156"
      inkscape:window-width="1920"
      inkscape:window-height="1017"
      inkscape:window-x="-8"
@@ -101,7 +101,8 @@
      stroke="#ff7b00"
      stroke-width="9"
      id="polyline2"
-     style="stroke-linecap:round" />
+     style="stroke-linecap:round"
+     transform="translate(0,-2.0397311)" />
   <polyline
      points="60 90, 135 90, 85 140, 16 73"
      fill="none"
@@ -109,7 +110,7 @@
      stroke-width="9"
      id="polyline4"
      style="stroke-linecap:round"
-     transform="translate(2.2946975,4.0794622)" />
+     transform="translate(2.2946975,2.0397311)" />
   <!-- Background color hex: 202020-->
 </svg>
 
